# youtube_pipeline

./: .gitignore  .gitmodules  README.md  main.py  output.md  pyproject.toml  uploader.py  youtube_video_metadata.json  youtube_video_metadata.md
workflows/youtube-pipeline-video.workflow/Contents/: document.wflow
workflows/youtube_pipeline_audio.workflow/Contents/: document.wflow
yt-dlp/: readme.md
yt-dlp/outputs/: vtt2text.py  vtt2text.sh
