[tool.poetry]
name = "youtube-pipeline"
version = "0.1.0"
description = ""
authors = ["BCM <dahifi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.5"}
google-api-python-client = "^2.125.0"
oauth2client = "^4.1.3"
progressbar2 = "^4.4.2"
youtube-upload = {git = "https://github.com/tokland/youtube-upload.git"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

